--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -778,7 +778,7 @@ foxtrick.ntremoveconfirmation=Do you really want to add/remove this player from 
 foxtrick.confirmstripserver=Do you want to strip the Hattrick server from links to make them usable in the forum?
 foxtrick.conferences.signaturetoggle=Signature
 foxtrick.conferences.markunread=Mark unread from here
-foxtrick.tweaks.selectplayer=Select player
+copy.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
 foxtrick.linkscustom.addpersonallink=Add personal link
 foxtrick.linkscustom.addlink=Add link
@@ -791,11 +791,11 @@ foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
-foxtrick.matches.income=Income:
-foxtrick.tweaks.Birthdays=Birthdays
-foxtrick.tweaks.BirthdayToday=Birthdays today
-foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
-foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
+matches.income=Income:
+copy.Birthdays=Birthdays
+copy.BirthdayToday=Birthdays today
+copy.BirthdayLastWeek=Birthdays last week
+copy.BirthdayNextWeek=Birthdays next week
 foxtrick.copymatchid=Click to copy matchID to clipboard
 foxtrick.ExtendedPlayerDetails.perseason=/season
 
@@ -816,12 +816,10 @@ HTLanguageChanged=FoxTrick has detected a change in language. The language of Fo
 Coach=Coach
 CurrentSquad=Current squad
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Actions
-foxtrick.tweaks.writeinguestbook=Write in Guestbook
-foxtrick.tweaks.copyplayerad=Copy player ad
-foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
+
+managerButtons.writeInGuestbook=Write in Guestbook
+copy.copyplayerad=Copy player ad
+copy.copied=The player ad has been copied to the clipboard.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -830,6 +828,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copy ratings (in HT-ML)
 CopyRatings.home=Copy home ratings (in HT-ML)
 CopyRatings.away=Copy away ratings (in HT-ML)
@@ -845,6 +844,14 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
+copy.copy.skilltable=Copy skill table to clipboard (in HT-ML)
+copy.copied.skilltable=The skill table has been copied to the clipboard.
+copy.copied.matchid=The match ID has been copied to the clipboard.
+copy.copied.postid=Post ID [post=%s] has been copied to the clipboard.
+copy.copied.posting=Posting %s has been copied to the clipboard.
+copy.copySelected=Copy selection with Ctrl + C.
+copy.operaPaste=Paste with Shift + Left Click.
+
 MatchReportFormat.MatchReport=Match Report
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Kick-off
@@ -854,31 +861,21 @@ MatchReportFormat.extraTime=Extra Time
 MatchReportFormat.penaltyShootOut=Penalty Shoot-out
 MatchReportFormat.result=Result
 
-CopySelected.desc=Copy selection with Ctrl + C.
-SpecialPaste.desc=Paste with Shift + Left Click.
-
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
-foxtrick.tweaks.skilltablecopied=The skill table has been copied to the clipboard.
-foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
-foxtrick.tweaks.postidcopied=Post ID [post=%s] has been copied to the clipboard.
-foxtrick.tweaks.postingcopied=Posting %s has been copied to the clipboard.
-foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Attack vs Defence
-foxtrick.matches.right=Right
-foxtrick.matches.left=Left
-foxtrick.matches.center=Central
-foxtrick.matches.defense=def
-foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Ind. set pieces
-foxtrick.matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+matches.attackdefensebars=Attack vs Defence
+matches.right=Right
+matches.left=Left
+matches.center=Central
+matches.defense=def
+matches.attack=att
+matches.indfreekick=Ind. set pieces
+matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter Statistics
+matches.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -913,18 +910,47 @@ TeamPopupLinks.OpenNewTab=Open in new tab
 total_stars=Total stars
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Show map
-foxtrick.FlagCollectionToMap.HideMap=Hide map
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europe
-foxtrick.FlagCollectionToMap.MEast=Middle East
-foxtrick.FlagCollectionToMap.SAmerica=South America
-foxtrick.FlagCollectionToMap.World=World
+flagCollectionToMap.ShowMap=Show map
+flagCollectionToMap.HideMap=Hide map
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europe
+flagCollectionToMap.MEast=Middle East
+flagCollectionToMap.SAmerica=South America
+flagCollectionToMap.World=World
 
 # SkillTable
 Skill_table=Skill Table
+Switch_view=Switch view
+AddHomegrown=Add home grown players
+showTimeInClub=Show time in club
 
+team.status.booked=Friendly booked
+ShowFriendlyBooked.ShowFriendlies=Show friendlies
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Hide bruised
+TransferSearchResultFilters.hideInjured=Hide injured
+TransferSearchResultFilters.hideSuspended=Hide suspended
+TransferSearchResultFilters.days=Days:
+
+# refer to transfer search form
+minimum=At least
+maximum=Maximum
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=View
+rapidId.viewById=View by ID
+rapidId.senior=Senior
+rapidId.youth=Youth
+rapidId.tournaments=Tournaments
+rapidId.tournament=Tournament
+
+# SkillTable
+skillTable.switchView=Switch the view of the table.
+skillTable.addHomegrown=Adds all homegrown players from the current senior squad
+skillTable.showTimeInClub=Shows time since player joined the club's senior squad
 Nationality=Nationality
 Nationality.abbr=Nat
 Flag=Flag
@@ -948,34 +974,6 @@ CurrentBidder=Current highest bidder
 CurrentBidder.abbr=Bidder
 CurrentBidderShort=Current highest bidder
 CurrentBidderShort.abbr=Bd
-
-
-team.status.booked=Friendly booked
-ShowFriendlyBooked.ShowFriendlies=Show friendlies
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Hide bruised
-TransferSearchResultFilters.hideInjured=Hide injured
-TransferSearchResultFilters.hideSuspended=Hide suspended
-TransferSearchResultFilters.days=Days:
-
-# refer to transfer search form
-minimum=At least
-maximum=Maximum
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=View by ID
-Senior=Senior
-Youth=Youth
-Tournaments=Tournaments
-Tournament=Tournament
-
-# SkillTable
-foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
-foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current senior squad
-foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior squad
-foxtrick.SkillTable.detach=Detach
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicted result
@@ -1023,9 +1021,6 @@ MyMonitor.type.nt=National
 # MarkAllAsRead
 MarkAllAsRead.title=Mark all threads in all forums as read
 
-# TickerAlert
-TickerAlert.enable=Enable
-TickerAlert.sound=Sound
 
 # tickers
 ticker.type.welcome=Welcome message
@@ -1044,26 +1039,13 @@ LocalTime.hattrick.title=Time in Hattrick time zone. Click the clock to switch t
 LocalTime.local=Local time
 LocalTime.local.title=Time in local time zone. Click the clock to switch to Hattrick time.
 
-# Links
-Links.feeds=Feeds of link lists (separated by line breaks)
-
-#actions
-Copy=Copy
-View=View
-Switch_view=Switch view
-Detach=Detach
-AddHomegrown=Add home grown players
-showTimeInClub=Show time in club
-sort.up=Up
-sort.down=Down
-action.clearCache=Clear cache
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
-
 # fennec ui
-pageAction.rightSidebar=Show right bar
+pageAction.rightMenu=Show right menu
 pageAction.mainContent=Show main content
-pageAction.leftSidebar=Show left bar
+pageAction.leftMenu=Show left menu
 pageAction.all=Show all
+
+sidebarBox.actions=Actions
 
 # buttons
 button.ok=OK
@@ -1082,6 +1064,9 @@ button.restoreDefault=Restore default
 button.deleteToken=Delete token
 button.disableAll=Disable all
 button.revokePermissions=Revoke permissions
+button.copy=Copy
+button.up=Up
+button.down=Down
 
 status.loading=Loading…
 status.loading.abbr=…
@@ -1098,6 +1083,8 @@ oauth.success=FoxTrick has been successfully authorized! Please reload this page
 
 api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
 api.serverUnavailable=Server unavailable
+api.clearCache=Clear cache
+api.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
 
 exception.error=Error %s
 
@@ -1109,8 +1096,12 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Feeds of link lists (separated by line breaks)
+TickerAlert.enable=Enable
+TickerAlert.sound=Sound
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Disable temporarily
 toolbar.featureHighlight=Highlight features
@@ -1120,7 +1111,11 @@ status.active=active
 status.enabled=enabled, but not active on %s
 status.disabled=disabled
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick Preferences
+
+prefs.view.by.category=View by category
+prefs.view.by.page=View by last HT page
 
 module.screenshot=Screenshot
 module.link=You can copy and paste this link to the forum to direct here
@@ -1201,14 +1196,10 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-prefs.view.by.category=View by category
-prefs.view.by.page=View by last HT page
-
-prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
-prefs.delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
-prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
-prefs.revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
-
-prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
+prefs.restoreDefault.ask=Are you sure you want to restore the default settings?
+prefs.deleteToken.ask=Delete OAuth token/secret for TeamID  %s?
+prefs.disableAllModules.ask=Are you sure you want to disable all modules?
+prefs.revokePermissions.ask=Are you sure you want to revoke all optional permissions?
+prefs.getPermissions.alert=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
 ###EOF
