--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -236,7 +236,7 @@ foxtrick.ExtraShortcuts.AddSpace.desc=Increase space for shortcut icons
 foxtrick.ExtraShortcuts.Supporterstats.desc=Link to supporter stats
 foxtrick.ExtraShortcuts.Transfers.desc=Link to transfers page of the own team
 foxtrick.ExtraShortcuts.Prefs.desc=Link to preferences page
-foxtrick.ExtraShortcuts.ManageCHPP.desc=Link to CHPP preferences page
+ExtraShortcuts.ManageCHPP.desc=Link to CHPP preferences page
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link to FoxTrick preferences page
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
@@ -270,10 +270,10 @@ foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
 foxtrick.MovePlayerSelectbox.desc=Moves players select box up on players detail page
 foxtrick.SeasonStats.desc=Shows some stats on the match archive pages
 foxtrick.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
-foxtrick.LeagueNewsFilter.all.desc=Show all news
-foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
-foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
+LeagueNewsFilter.all.desc=Show all news
+LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
+LeagueNewsFilter.transfers.desc=Show only transfers
+LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
 #MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
@@ -390,31 +390,35 @@ foxtrick.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs 
 # IN-GAME STRINGS. translate first
 
 #Save for work
-foxtrick.SafeForWork.title=Title
-foxtrick.SafeForWork.icon=Icon
+SafeForWork.title=Title
+SafeForWork.icon=Icon
 
 #Embed Media
-foxtrick.EmbedMedia.EmbeddedImage=Embedded Image
+EmbedMedia.EmbeddedImage=Embedded Image
 
-#icons
-foxtrick.ExtraShortcuts.statistics=Statistics
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Manage your CHPP products
-foxtrick.ExtraShortcuts.prefs=Preferences
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick preferences
+#Extrashortcuts
+ExtraShortcuts.statistics=Statistics
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Manage your CHPP products
+ExtraShortcuts.prefs=Preferences
+ExtraShortcuts.ftprefs=FoxTrick preferences
+
+#lineupShortcut
+LineupShortcut.lineup=Lineup
+
 
 #HistoryStats
-foxtrick.HistoryStats.season=Season
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Cup round
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Series
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=Series final position
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=History stats
-foxtrick.HistoryStats.cupwinner=Cup winner
-foxtrick.HistoryStats.cupwinner.short=CW
+HistoryStats.season=Season
+HistoryStats.season.short=S
+HistoryStats.cup=Cup round
+HistoryStats.cup.short=C
+HistoryStats.league=Series
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=Series final position
+HistoryStats.finalPosition.short=P
+HistoryStats.label=History stats
+HistoryStats.cupwinner=Cup winner
+HistoryStats.cupwinner.short=CW
 
 # YouthPromotes
 #following string uses pluralForms
@@ -422,56 +426,55 @@ YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be p
 YouthPromotes.today=Player can be promoted today!
 
 # links
-foxtrick.links.boxheader=Links
+links.boxheader=Links
 
 #teamstats+filters
-foxtrick.TeamStats.label=Team overview
-foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 yr
-foxtrick.TeamStats.PlayerToOld.label=Players >= 19 yr
-foxtrick.TeamStats.Cards.label=Cards
-foxtrick.TeamStats.Injured.label=Injured
-foxtrick.TeamStats.TransferListed.label=Transfer-listed
-foxtrick.TeamStats.Pictures.label=Faces
-foxtrick.TeamStats.PlayedLatest.label=Played in last match
-foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
-foxtrick.TeamStats.NotTransferListed.label=Not Transfer-listed
-foxtrick.TeamStats.ActivePlayers.label=Active players
-foxtrick.TeamStats.HomeGrownPlayers.label=Home grown players
-foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
-foxtrick.TeamStats.FilterFor=Filter for
+TeamStats.boxheader=Team overview
+TeamStats.PlayerNotToOld=Players < 19 yr
+TeamStats.PlayerToOld=Players >= 19 yr
+TeamStats.Cards=Cards
+TeamStats.Injured=Injured
+TeamStats.TransferListed=Transfer-listed
+TeamStats.Pictures=Faces
+TeamStats.PlayedLatest=Played in last match
+TeamStats.NotPlayedLatest=Did not play in last match
+TeamStats.NotTransferListed=Not Transfer-listed
+TeamStats.ActivePlayers=Active players
+TeamStats.HomeGrownPlayers=Home grown players
+TeamStats.PurchasedPlayers=Purchased players
+TeamStats.FilterFor=Filter for
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-foxtrick.seasonstats.boxheader=Season overview
-
-foxtrick.seasonstats.played=Pld
-foxtrick.seasonstats.won=W
-foxtrick.seasonstats.draw=D
-foxtrick.seasonstats.lost=L
-foxtrick.seasonstats.goalplus=GF
-foxtrick.seasonstats.goalminus=GA
-foxtrick.seasonstats.goaldiff=±
-foxtrick.seasonstats.total=T
-foxtrick.seasonstats.home=H
-foxtrick.seasonstats.away=A
-foxtrick.seasonstats.league=League
-foxtrick.seasonstats.friendly=Friendlies
-foxtrick.seasonstats.cup=Cup
-foxtrick.seasonstats.masters=Masters
-
+seasonstats.boxheader=Season overview
+seasonstats.played=Pld
+seasonstats.won=W
+seasonstats.draw=D
+seasonstats.lost=L
+seasonstats.goalplus=GF
+seasonstats.goalminus=GA
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=League
+seasonstats.friendly=Friendlies
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 #Newsfeed filter
-foxtrick.LeagueNewsFilter.Filter=Newsfeed filter:
-foxtrick.LeagueNewsFilter.all=All
-foxtrick.LeagueNewsFilter.friendlies=Friendlies & changed coaches
-foxtrick.LeagueNewsFilter.transfers=Transfers
-foxtrick.LeagueNewsFilter.lineup_changes=Lineup changes
+LeagueNewsFilter.label=Newsfeed filter:
+LeagueNewsFilter.all=All
+LeagueNewsFilter.friendlies=Friendlies & changed coaches
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Lineup changes
 
-# FoxtrickAddLeaveConfButton
-leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
-leave_conf_button=Leave forum
+# AddLeaveConfButton
+AddLeaveConfButton.alert=Click on the 'Save' button on the next page to leave this forum.
+AddLeaveConfButton.LeaveForum=Leave forum
 
-forum.preferences=Forum Preferences
+#ShowForumPrefButton
+ShowForumPrefButton.forumPreferences=Forum Preferences
 
 # ForumTemplates
 make_template_from_post=Make template from post
@@ -487,14 +490,6 @@ show_preview_from_post=Display a preview of the posting
 preview=Preview
 forumPreview.send=Send
 
-#Forums
-foxtrick.CopyPostID=Copy PostID to clipboard
-CopyPosting=Copy Posting in %s style
-CopyPosting.abbr=Copy in %s style
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=last
 
 ForumYouthIcons.label=Youth Links
 ForumYouthIcons.labelTournament=Tournaments
@@ -529,10 +524,10 @@ ForumSpecialBBCode.symbols=Insert symbol: %s
 ShowNestedQuotes=Show nested quotes
 
 #Transferlistfilters
-foxtrick.transferfilter.Enter_filter_name=Enter filter name:
-foxtrick.transferfilter.delete_filter_ask=Do you really want to delete this filter?
-foxtrick.transferfilter.save_new_filter=Save new filter
-foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filters
+TransferSearchFilters.boxheader=FoxTrick Filters
+TransferSearchFilters.enterName=Enter filter name:
+TransferSearchFilters.deleteFilter.ask=Do you really want to delete this filter?
+TransferSearchFilters.saveFilter=Save new filter
 
 #Filter
 Filters=Filters
@@ -757,19 +752,18 @@ skilltable.youthplayer=youthplayer
 skilltable.rebought_youthplayer=rebought youth player
 
 #matchdetail
-foxtrick.matchdetail.midfield=Midfield
-foxtrick.matchdetail.attack=Attack
-foxtrick.matchdetail.defence=Defence
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=lineup
+match.ratings.midfield=Midfield
+match.ratings.attack=Attack
+match.ratings.defence=Defence
+match.ratings.total=Total
 
-foxtrick.matchdetail.right=Right
-foxtrick.matchdetail.center=Centre
-foxtrick.matchdetail.left=Left
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=L
-foxtrick.matchdetail.ifkshort=I
+match.ratings.right=Right
+match.ratings.center=Centre
+match.ratings.left=Left
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.bidconfirmation=Do you wish to bid for this player? The price is %s.
 foxtrick.tlconfirmation=Do you wish to transfer list this player? The asking price is %s.
 foxtrick.staffconfirmationhire=Do you wish to hire %num %kind?
@@ -829,6 +823,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copy PostID to clipboard
+CopyPosting=Copy Posting in %s style
+CopyPosting.abbr=Copy in %s style
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=last
+
 CopyRatings.both=Copy ratings (in HT-ML)
 CopyRatings.home=Copy home ratings (in HT-ML)
 CopyRatings.away=Copy away ratings (in HT-ML)
@@ -871,11 +873,6 @@ matches.defense=def
 matches.attack=att
 matches.indfreekick=Ind. set pieces
 matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-matches.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
