--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -273,7 +273,7 @@ module.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
 module.LeagueNewsFilter.all.desc=Show all news
 module.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 module.LeagueNewsFilter.transfers.desc=Show only transfers
-module.LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
+module.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 module.TeamPopupLinks.TeamLinks.desc=Add popups to team links
@@ -475,6 +475,11 @@ ExtraPlayerInfo.offensiveTrainer=A %s trainer who is fond of attacking.
 ExtraPlayerInfo.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 ManagerButtons.writeInGuestbook=Write in Guestbook
 LineupShortcut.lineup=Lineup
+ShowFriendlyBooked.ShowFriendlies=Show friendlies
+
+#Transfer prices
+MedianTransferPrice.median=Median price
+MedianTransferPrice.average=Average price
 
 #forum
 AddLeaveConfButton.LeaveForum=Leave forum
@@ -485,6 +490,7 @@ HideSignatures.signaturetoggle=Signature
 MarkUnread.markunread=Mark unread from here
 EmbedMedia.EmbeddedImage=Embedded Image
 ForumStripHattrickLinks.ask=Do you want to strip the Hattrick server from links to make them usable in the forum?
+MarkAllAsRead.title=Mark all threads in all forums as read
 
 # ForumTemplates
 ForumTemplates.make=Make template from post
@@ -549,10 +555,6 @@ Filters.specialty=Specialty
 Filters.stars=Stars
 Filters.minimum=At least
 Filters.maximum=Maximum
-
-#Transfer prices
-MedianTransferPrice.median=Median price
-MedianTransferPrice.average=Average price
 
 match.type.league=League
 match.type.qualification=Qualification
@@ -652,15 +654,13 @@ match.role.captain.abbr=Capt.
 match.player.unknown=Unknown player
 
 # SkillTable
-Skill_table=Skill Table
-Switch_view=Switch view
-AddHomegrown=Add home grown players
-showTimeInClub=Show time in club
-Switch_view.title=Switch the view of the table.
-skillTable.addHomegrown=Adds all homegrown players from the current senior squad
-skillTable.showTimeInClub=Shows time since player joined the club's senior squad
-skilltable.youthplayer=youthplayer
-skilltable.rebought_youthplayer=rebought youth player
+SkillTable.header=Skill Table
+SkillTable.switchView=Switch view
+SkillTable.addHomegrown=Add home grown players
+SkillTable.showTimeInClub=Show time in club
+SkillTable.switchView.title=Switch the view of the table.
+SkillTable.addHomegrown.title=Adds all homegrown players from the current senior squad
+SkillTable.showTimeInClub.title=Shows time since player joined the club's senior squad
 PlayerNumber=Player number
 PlayerNumber.abbr=#
 TSI=Total Skill Index
@@ -698,7 +698,7 @@ Last_match=Last Match
 Last_match.abbr=Last
 Last_stars=Latest stars
 Last_stars.abbr=Rt
-Last_stars_EndOfGame=Last stars at the end of game
+Last_stars_EndOfGame=Last yellow stars
 Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Last brown stars
 Last_stars_decline.abbr=Diff
@@ -760,6 +760,9 @@ CurrentBidder.abbr=Bidder
 CurrentBidderShort=Current highest bidder
 CurrentBidderShort.abbr=Bd
 
+skilltable.youthplayer=Youthplayer
+skilltable.rebought_youthplayer=Rebought youth player
+
 #confirms
 ConfirmActions.bid=Do you wish to bid for this player? The price is %s.
 ConfirmActions.transferlist=Do you wish to transfer list this player? The asking price is %s.
@@ -782,13 +785,10 @@ links.custom.help=Help
 links.custom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 links.custom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
 
-
 #following string uses pluralForms
 notify.newMail=You have received %s new mail.;You have received %s new mails.
 #following string uses pluralForms
 notify.newForumMessage=There is %s new forum reply to you.;There are %s new forum replies to you.
-
-matchView.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -798,40 +798,33 @@ copy.ht-ml=Copy in HT-ML
 copy.table=Copy Table in HT-ML
 
 #copy
-copy.copyplayerad=Copy player ad
-copy.copied=The player ad has been copied to the clipboard.
+copy.playerad=Copy player ad
+copy.playerad.copied=The player ad has been copied to the clipboard.
 copy.matchid=Click to copy matchID to clipboard
-
-copy.PostID=Copy PostID to clipboard
-CopyPosting=Copy Posting in %s style
-CopyPosting.abbr=Copy in %s style
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=last
-
-CopyRatings.both=Copy ratings (in HT-ML)
-CopyRatings.home=Copy home ratings (in HT-ML)
-CopyRatings.away=Copy away ratings (in HT-ML)
-CopyRatings.copied=The ratings have been copied to the clipboard.
-
-CopyYouth.trainingReport=Copy training report
-CopyYouth.trainingReport.copied=Training report has been copied.
-CopyYouth.scoutComment=Copy scout comment
-CopyYouth.scoutComment.copied=Scout comment has been copied.
-CopyYouth.playerSource=Copy player source
-CopyYouth.playerSource.copied=Player source has been copied.
-CopyYouth.fixturesSource=Copy fixtures source
-CopyYouth.fixturesSource.copied=Fixtures source has been copied.
-CopyYouth.goto=Go to %s
-
-copy.copy.skilltable=Copy skill table to clipboard (in HT-ML)
-copy.copied.skilltable=The skill table has been copied to the clipboard.
-copy.copied.matchid=The match ID has been copied to the clipboard.
-copy.copied.postid=Post ID [post=%s] has been copied to the clipboard.
-copy.copied.posting=Posting %s has been copied to the clipboard.
-copy.copySelected=Copy selection with Ctrl + C.
-copy.operaPaste=Paste with Shift + Left Click.
+copy.matchid.copied=The match ID has been copied to the clipboard.
+copy.skilltable.title=Copy skill table to clipboard (in HT-ML)
+copy.skilltable.copied=The skill table has been copied to the clipboard.
+copy.postid=Copy PostID to clipboard
+copy.postid.copied=Post ID [post=%s] has been copied to the clipboard.
+copy.posting=Copy in %s style
+copy.posting.title=Copy Posting in %s style
+copy.posting.copied=Posting %s has been copied to the clipboard.
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=last
+copy.ratings.both=Copy ratings (in HT-ML)
+copy.ratings.home=Copy home ratings (in HT-ML)
+copy.ratings.away=Copy away ratings (in HT-ML)
+copy.ratings.copied=The ratings have been copied to the clipboard.
+copy.trainingReport=Copy training report
+copy.trainingReport.copied=Training report has been copied.
+copy.scoutComment=Copy scout comment
+copy.scoutComment.copied=Scout comment has been copied.
+copy.playerSource=Copy player source
+copy.playerSource.copied=Player source has been copied.
+copy.fixturesSource=Copy fixtures source
+copy.fixturesSource.copied=Fixtures source has been copied.
 
 #matches
 matches.income=Income:
@@ -843,7 +836,8 @@ matches.defense=def
 matches.attack=att
 matches.indfreekick=Ind. set pieces
 matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
-total_stars=Total stars
+
+matches.lineup.totalStars=Total stars
 
 #matchdetail
 match.ratings.midfield=Midfield
@@ -875,7 +869,6 @@ MatchReportFormat.extraTime=Extra Time
 MatchReportFormat.penaltyShootOut=Penalty Shoot-out
 MatchReportFormat.result=Result
 
-
 #teampopups
 Manager=Manager
 Team=Team
@@ -905,10 +898,6 @@ flagCollectionToMap.MEast=Middle East
 flagCollectionToMap.SAmerica=South America
 flagCollectionToMap.World=World
 
-team.status.booked=Friendly booked
-ShowFriendlyBooked.ShowFriendlies=Show friendlies
-
-
 # TransferSearchResultFilters
 TransferSearchResultFilters.hideBruised=Hide bruised
 TransferSearchResultFilters.hideInjured=Hide injured
@@ -922,7 +911,6 @@ RapidId.senior=Senior
 RapidId.youth=Youth
 RapidId.tournaments=Tournaments
 RapidId.tournament=Tournament
-
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicted result
@@ -966,10 +954,7 @@ MyMonitor.removeTeamFormat=%n (%t, #%i)
 MyMonitor.type.senior=Senior
 MyMonitor.type.youth=Youth
 MyMonitor.type.nt=National
-
-# MarkAllAsRead
-MarkAllAsRead.title=Mark all threads in all forums as read
-
+MyMonitor.htLive=HT Live
 
 # tickers
 ticker.type.welcome=Welcome message
@@ -993,6 +978,8 @@ pageAction.rightMenu=Show right menu
 pageAction.mainContent=Show main content
 pageAction.leftMenu=Show left menu
 pageAction.all=Show all
+
+team.status.booked=Friendly booked
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -1024,6 +1011,7 @@ button.revokePermissions=Revoke permissions
 button.copy=Copy
 button.up=Up
 button.down=Down
+button.goto=Go to %s
 
 status.loading=Loading…
 status.loading.abbr=…
@@ -1051,8 +1039,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 ReadHtPrefs.HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
 
-# End of IN-GAME STRINGS.
+specialCopy.hint=Copy selection with Ctrl + C.
+specialPaste.hint=Paste with Shift + Left Click.
 
+# End of IN-GAME STRINGS.
 
 # -----------------------------------------------------------------------------
 # option function strings
