embed-media.js: oembed iframe only. browser clearification
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9141 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -90,7 +90,7 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
 module.EmbedMedia.EmbedVimeoVideos.desc=Embed Vimeo videos
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embed FunnyOrDie videos
 module.EmbedMedia.EmbedDailymotionVideos.desc=Embed Dailymotion videos
-module.EmbedMedia.EmbedModeOEmebed.desc=Use oEmbed to embed media (Chrome only)
+module.EmbedMedia.EmbedModeOEmebed.desc=Use oEmbed to embed media (Firefox and Chrome only)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Replace the link text by the label of the media item, e.g. the image name
 module.EmbedMedia.EmbedSoundCloud.desc=Embed Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Embed Flickr images
