load links feed as zip (experimental)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9161 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,7 @@
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
 			"content/lib/PluralForm.js",
+			"content/lib/ZipFile.complete.js",
 			
 			//<!-- core modules -->
 			"content/redirections.js",
