--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -382,12 +382,16 @@ module.Filter.desc=Adds filters to top players page
 module.RatingsDisplay.desc=Displays average ratings in a different style
 module.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 module.RatingsDisplay.HatStats.desc=As HatStats
+module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
 
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
+rating.average=Average rating
 
 #Save for work
 SafeForWork.title=Title
