--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -55,7 +55,6 @@ module.TransferDeadline.desc=Adds an extra line to each search result on the tra
 module.HTDateFormat.desc=Adds the global/local HT week and season to the most important dates on HT pages
 module.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 \= Monday/default, -2 \= Saturday)
-module.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a TeamID link
 module.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 module.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 module.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
@@ -276,6 +275,8 @@ module.LeagueNewsFilter.transfers.desc=Show only transfers
 module.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
+module.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a TeamID link
+module.TeamPopupLinks.OwnTeamHighlight.desc=Highlight own team in tables
 module.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 module.TeamPopupLinks.UserLinks.desc=Add popups to manager links
 module.TeamPopupLinks.Manager.desc=Manager (for team links only)
