team-stats.js: update with filters
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9191 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -426,6 +426,10 @@ YouthPromotes.today=Player can be promoted today!
 #teamstats+filters
 TeamStats.boxheader=Team overview
 TeamStats.General=General
+TeamStats.Players=Players
+TeamStats.Total=Total
+TeamStats.Selected=Selected
+TeamStats.Average=Average
 TeamStats.PlayerNotToOld=Players < 19 yr
 TeamStats.PlayerToOld=Players >= 19 yr
 TeamStats.Cards=Cards
