player-filters.js: attribute filters added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9195 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -555,6 +555,7 @@ Filters.ok=Ok
 Filters.clear=Clear
 Filters.noFilter=No filter
 Filters.none=None
+Filters.Attributes=Attribute filters
 Filters.days=Days
 Filters.tsi=TSI
 Filters.stamina=Stamina
@@ -564,6 +565,11 @@ Filters.specialty=Specialty
 Filters.stars=Stars
 Filters.minimum=At least
 Filters.maximum=Maximum
+Filters.over=Over
+Filters.under=Under
+Filters.equal=Equal
+Filters.notEqual=Not equal
+
 
 match.type.league=League
 match.type.qualification=Qualification
