team-stats.js: skills+nationalities+wage... added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9202 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -426,6 +426,8 @@ YouthPromotes.today=Player can be promoted today!
 #teamstats+filters
 TeamStats.boxheader=Team overview
 TeamStats.General=General
+TeamStats.Attributes=Attributes
+TeamStats.Skills=Skills
 TeamStats.Players=Players
 TeamStats.Total=Total
 TeamStats.Selected=Selected
