New Module: player-stats-experience.js Shows Subskill on playerStats page and shows XP gained match by match. Work in Progress
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9206 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -385,7 +385,7 @@ module.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
-
+module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 # -----------------------------------------------------------------------------
 
 
