--- a/Info.plist
+++ b/Info.plist
@@ -125,6 +125,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/information-aggregation/my-monitor.js</string>
 				<string>content/information-aggregation/nt-peek.js</string>
 				<string>content/information-aggregation/player-birthday.js</string>
+				<string>content/information-aggregation/player-stats-experience.js</string>
 				<string>content/information-aggregation/season-stats.js</string>
 				<string>content/information-aggregation/series-flags.js</string>
 				<string>content/information-aggregation/show-friendly-booked.js</string>
