--- a/manifest.json
+++ b/manifest.json
@@ -94,6 +94,7 @@
 			"content/information-aggregation/my-monitor.js",
 			"content/information-aggregation/nt-peek.js",
 			"content/information-aggregation/player-birthday.js",
+			"content/information-aggregation/player-stats-experience.js",
 			"content/information-aggregation/season-stats.js",
 			"content/information-aggregation/series-flags.js",
 			"content/information-aggregation/show-friendly-booked.js",
