--- a/manifest.json
+++ b/manifest.json
@@ -127,6 +127,7 @@
 			"content/links/links-tracker.js",
 			"content/links/links-training.js",
 			"content/links/links-youth.js",
+			"content/links/links-world.js",
 			"content/matches/att-vs-def.js",
 			"content/matches/copy-ratings.js",
 			"content/matches/htms-prediction.js",
